[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/malayalamfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Japamala.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/ML_TT_Thunchan_Normal.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -3
font_data = ExtResource( 4 )

[node name="Japamala" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.31102
margin_top = -2.24747
margin_right = 1.31104
margin_bottom = -2.24747
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 36.0
margin_right = -5.0
margin_bottom = -123.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "B\\"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.47247
margin_top = 5.84251
margin_right = -4.52753
margin_bottom = -437.158
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0, 0.266667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "]"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 395.0
margin_right = 288.0
margin_bottom = 421.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="HBoxContainer2"]
margin_left = 144.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.764706, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="HBoxContainer2"]
margin_left = 144.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="." instance=ExtResource( 2 )]
margin_left = 0.055748
margin_top = 424.87
margin_right = 288.056
margin_bottom = 444.87
[connection signal="pressed" from="HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]

[editable path="HBoxContainer"]
